# os-system-prg-labs

./: CMakeLists.txt
lab1/: README.md  args.bash  artem.bash  compile.bash  ext.bash  hello_linux.c  out.txt  task3.bash
lab2/: main.c  main2.c  main3.c  main4.c  main5.c
lab3/: common.c  main.c
lab4/: common.c  k_1.c  tree.c
